--- a/.github/workflows/build_padavan.yml
+++ b/.github/workflows/build_padavan.yml
@@ -20,72 +20,81 @@ env:
   TZ: Asia/Shanghai
   DIY_P1_SH: diy-part1.sh
 
-
 jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-    - name: Checkout
-      uses: actions/checkout@main
-    - name: Initialization environment
-      run: |
-        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
-        sudo -E apt-get -qq update
-        sudo -E apt-get -qq install unzip libtool-bin curl cmake gperf gawk flex bison nano xxd \
-        fakeroot kmod cpio git python3-docutils gettext automake autopoint \
-        texinfo build-essential help2man pkg-config zlib1g-dev libgmp3-dev \
-        libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget libc-dev-bin > /dev/null
-        sudo -E apt-get -qq autoremove --purge
-        sudo -E apt-get -qq clean
-        sudo timedatectl set-timezone "$TZ"
-        sudo mkdir -p $RT_N56U
-        mkdir -p $IMAGES
-        sudo chown $USER:$GROUPS $RT_N56U
-        
-    - name: Clone source code and build toolchain
-      run: |
-        echo "DATE=$(TZ='Asia/Shanghai' date '+%Y.%m.%d-%H%M')" >> $GITHUB_ENV
-        echo "NAME=Padavan- ${{ github.event.inputs.production }}" >> $GITHUB_ENV
-        echo 开始编译时间： >> $IMAGES/readme.txt
-        TZ='Asia/Shanghai' date '+%Y-%m-%d %H:%M:%S' >> $IMAGES/readme.txt
-        git clone --depth=1 ${{ github.event.inputs.cloneurl }} $RT_N56U > /dev/null
-        cd $RT_N56U/toolchain-mipsel
-        sh dl_toolchain.sh > /dev/null
+      - name: Checkout
+        uses: actions/checkout@main
+      - name: Initialization environment
+        run: |
+          sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
+          sudo -E apt-get -qq update
+          sudo -E apt-get -qq install unzip libtool-bin curl cmake gperf gawk flex bison nano xxd \
+          fakeroot kmod cpio git python3-docutils gettext automake autopoint \
+          texinfo build-essential help2man pkg-config zlib1g-dev libgmp3-dev \
+          libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget libc-dev-bin > /dev/null
+          sudo -E apt-get -qq autoremove --purge
+          sudo -E apt-get -qq clean
+          sudo timedatectl set-timezone "$TZ"
+          sudo mkdir -p $RT_N56U
+          mkdir -p $IMAGES
+          sudo chown $USER:$GROUPS $RT_N56U
 
-    - name: Load custom feeds
-      run: |
-        cp -f ./$DIY_P1_SH $TRUNK/$DIY_P1_SH
-        chmod +x $TRUNK/$DIY_P1_SH
-        $TRUNK/$DIY_P1_SH
+      - name: Clone source code and build toolchain
+        run: |
+          echo "DATE=$(TZ='Asia/Shanghai' date '+%Y.%m.%d-%H%M')" >> $GITHUB_ENV
+          echo "NAME=Padavan- ${{ github.event.inputs.production }}" >> $GITHUB_ENV
+          echo 开始编译时间： >> $IMAGES/readme.txt
+          TZ='Asia/Shanghai' date '+%Y-%m-%d %H:%M:%S' >> $IMAGES/readme.txt
+          git clone --depth=1 ${{ github.event.inputs.cloneurl }} $RT_N56U > /dev/null
+          cd $RT_N56U/toolchain-mipsel
+          sh dl_toolchain.sh > /dev/null
 
-    - name: 开始编译
-      run: |
-        for m in ${{ github.event.inputs.production }}; do
+      - name: Load custom feeds
+        run: |
+          cp -f ./$DIY_P1_SH $TRUNK/$DIY_P1_SH
+          chmod +x $TRUNK/$DIY_P1_SH
           pushd $TRUNK
-          echo "::group::开始编译 ${m}..."
-          sudo ./clear_tree || echo
-          sudo ./build_firmware_modify $m > /dev/null
-          ls -l images
-          sudo mv -f images/*.trx $IMAGES
-          echo "::endgroup::"
+          sh ./$DIY_P1_SH
           popd
-        done
-    - name: 收集信息
-      run: |
-        cd $IMAGES
-        echo 完成编译时间： >> readme.txt
-        TZ='Asia/Shanghai'  date  '+%Y-%m-%d %H:%M:%S' >> readme.txt
-        echo >> readme.txt
-        echo 源码信息： >> readme.txt
-        pushd $RT_N56U
-        git ls-remote --get-url origin >> $IMAGES/readme.txt
-        git log --shortstat >> $IMAGES/readme.txt
-        popd
-        echo >> readme.txt
-        echo md5校验值： >> readme.txt
-        for m in *.trx
-        do
-          mv -fv "$m" "${m%.*}_${{ env.DATE }}.trx"
-        done
-        md5sum *.trx >> readme.txt || echo
-        ls -l
+
+      - name: Compile the firmware
+        run: |
+          for m in ${{ github.event.inputs.production }}; do
+            pushd $TRUNK
+            echo "::group::开始编译 ${m}..."
+            sudo ./clear_tree || echo
+            sudo ./build_firmware_modify $m > /dev/null
+            ls -l images
+            sudo mv -f images/*.trx $IMAGES
+            echo "::endgroup::"
+            popd
+          done
+
+      - name: Organize compile infomations
+        run: |
+          cd $IMAGES
+          echo 完成编译时间： >> readme.txt
+          TZ='Asia/Shanghai'  date  '+%Y-%m-%d %H:%M:%S' >> readme.txt
+          echo >> readme.txt
+          echo 源码信息： >> readme.txt
+          pushd $RT_N56U
+          git ls-remote --get-url origin >> $IMAGES/readme.txt
+          git log --shortstat >> $IMAGES/readme.txt
+          popd
+          echo >> readme.txt
+          echo "md5校验值：" >> readme.txt
+          for m in *.trx
+          do
+            mv -fv "$m" "${m%.*}_${{ env.DATE }}.trx"
+          done
+          md5sum *.trx >> readme.txt || echo
+          ls -l
+
+      - name: Upload images directory
+        if: true
+        uses: actions/upload-artifact@main
+        with:
+          name: ${{ env.NAME }}
+          path: ${{ env.IMAGES }}
