--- a/.github/workflows/test_artifact.yml
+++ b/.github/workflows/test_artifact.yml
@@ -78,7 +78,7 @@ jobs:
 
 
       - name: Upload images directory
-        if: steps.organize.outputs.status == 'success' && !cancelled()
+        if: true
         uses: actions/upload-artifact@v3
         with:
           name: ${{ env.NAME }}
