--- a/.github/workflows/build_padavan.yml
+++ b/.github/workflows/build_padavan.yml
@@ -10,7 +10,8 @@ on:
       cloneurl:
         description: 设置源码地址：
         # default: "https://github.com/MeIsReallyBa/padavan-4.4.git"
-        default: "https://github.com/keke1023/Padavan.git"
+        # default: "https://github.com/keke1023/Padavan.git"
+        default: "https://github.com/vb1980/Padavan-KVR.git"
         required: false
 
 env:
