--- a/.github/workflows/build_padavan.yml
+++ b/.github/workflows/build_padavan.yml
@@ -9,9 +9,9 @@ on:
         required: false
       cloneurl:
         description: 设置源码地址：
-        # default: "https://github.com/MeIsReallyBa/padavan-4.4.git"
+        default: "https://github.com/MeIsReallyBa/padavan-4.4.git"
         # default: "https://github.com/keke1023/Padavan.git"
-        default: "https://github.com/vb1980/Padavan-KVR.git"
+        # default: "https://github.com/vb1980/Padavan-KVR.git"
         required: false
 
 env:
